User study version v2
Updates:
- make the prediction after defined minutes (e.g. 2 minutes)
- Prototype 2: instead of deleting the wedges, keep the wedges and re-render the color
- added workout capability to keep the notification work during background mode
- log the moments when the user is looking at the screen
- add text with current CO2 level

--- a/Hilo-iwatch-1 WatchKit Extension/Info.plist
+++ b/Hilo-iwatch-1 WatchKit Extension/Info.plist
@@ -47,10 +47,13 @@
 		<string>com.apple.watchkit</string>
 	</dict>
 	<key>UIBackgroundModes</key>
-	<array/>
+	<array>
+		<string>audio</string>
+	</array>
 	<key>WKBackgroundModes</key>
 	<array>
 		<string>self-care</string>
+		<string>workout-processing</string>
 	</array>
 	<key>WKExtensionDelegateClassName</key>
 	<string>$(PRODUCT_MODULE_NAME).ExtensionDelegate</string>
